02/10 - Fixed bibliography ordering

--- a/atompreparation.tex
+++ b/atompreparation.tex
@@ -17,8 +17,7 @@ in~\SectionRef{sec:msquared_laser}
 and~\SectionRef{subsec:vel_select}, respectively. A
 description of the detection scheme, used to measure the population of
 atoms in \(\ket{F=1}\) and \(\ket{F=2}\) is presented
-in~\SectionRef{sec:atom_detection}
-
+in~\SectionRef{sec:atom_detection}.
 
 \section{Cooling in Optical Molasses}\label{sec:optical_molasses}
 {\textbf{Introduce motivation here}}
