--- a/interferometry.tex
+++ b/interferometry.tex
@@ -9,7 +9,7 @@ followed by a discussion of the methods used to detect the population
 in each internal state in~\SectionRef{sec:atom_detection}. The Raman
 transition spectrum and
 dynamics of the atoms during each Raman pulse are discussed
-in~\SectionRef{sec:pulse_characterisation}. This chapter continues
+in~\SectionRef{sec:atomint_rabiosc}. This chapter continues
 with an overview of indentified sources of noise and their impact on
 the interferometer's sensitivity to accelerations
 in~\SectionRef{sec:atomint_sensitivity}. Finally, a presentation of observed
@@ -1190,7 +1190,7 @@ the phase-locked loop for the M-Squared laser. The phase noise
 spectral density and corresponding Allan deviation for increasing
 integration time was measured by M-Squared during installation of the
 laser system. A plot of the Allan deviation is shown
-in~\FigureRef{fig:allan_dev_m_squared}. At an interferometer pulse
+in~\FigureRef{fig:allan_dev_m2}. At an interferometer pulse
 separation of
 \(T = \)\sivalue{25}{\milli\second}, the phase noise in the Raman
 laser results in an uncertainty in the interferometer phase of
