--- a/ramanoptics.tex
+++ b/ramanoptics.tex
@@ -484,7 +484,7 @@ Paris~\cite{Merlet2009} and in parabolic aircraft
 flights~\cite{Geiger2011a,Barrett2016}. \par\noindent The accelerometer is a
 navigation-grade AI-Q-2010 manufactured by \textit{Innalabs}. This particular
 device was chosen because its specified intrinsic noise was
-<\sivalue{7}{\micro\g} in the 0-\sivalue{100}{\Hertz} bandwidth. For a pulse separation \(T
+<\sivalue{7}{\micro\g} in the 0-\sivalue{100}{\Hz} bandwidth. For a pulse separation \(T
 = \sivalue{25}{\milli\second}\), the fringe spacing is
 \(\sivalue{31.2}{\micro\g}\) so it is sensitive enough to measure the
 acceleration to within one fringe. A schematic of this device is shown
