--- a/preamble.tex
+++ b/preamble.tex
@@ -3,14 +3,15 @@
 \usepackage{braket}
 \usepackage{siunitx}
 \usepackage{textcomp}
-\usepackage{acronym}
+\usepackage[printonlyused]{acronym}
 \usepackage{xspace}
 \usepackage{morefloats,subfig,afterpage}
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
 \usepackage{tikz}
 \usepackage{multirow}
-\usepackage[backend=bibtex,url=false]{biblatex}
+%\usepackage[backend=biber,url=false]{biblatex}
+\usepackage{cite}
 \usetikzlibrary{external}% activate!
 \usepackage{tikz-timing}
 \usepackage{booktabs}
@@ -21,7 +22,7 @@
 
 \immediate\write18{perl texcount.pl \jobname.tex -1 -sum=1 -merge -out=\jobname.sum}
 \newcommand\wordcount{\input{\jobname.sum}}
-\addbibresource{Thesis.bib}
+%\addbibresource{Thesis.bib}
 \graphicspath{{Figures/Chapter1/}{Figures/Chapter2/}{Figures/Chapter3/}{Figures/Chapter4/}{Figures/}{Figures/Chapter5/}{Figures/Chapter6/}}
 
 \makeatletter
