04/10 - Added to bibliography and finished conclusion

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,5 @@
-\chapter{Conclusion}
+\chapter{Outlook}
+\section{Conclusions}
 This project set out to explore the use of atom interferometry for
 inertial navigation. The specific aim was to demonstrate sensitivity
 to horizontal accelerations where gravitational acceleration acts
@@ -65,7 +66,7 @@ sensor is needed to filter the vibration noise. After correcting for
 this phase noise, it was found that the stability of the
 interferometer signal improved, particularly when the noise was
 smaller than $\pi$ \sivalue{}{\radian} - a half-side of a fringe. 
-\par\noindent
+\section{Avenues of Further Research}
 Although this work represents the first step towards inertial
 navigation using atom interferometry, there is still more to be done.
 Further work is planned to extend this system measure accelerations
@@ -79,9 +80,34 @@ orientation. This is a known problem in inertial navigation. An error
 in orientation leads to a
 position error that oscillates periodically, known as a Schuler
 oscillation~\cite{Schuler1923}. Orienting the accelerometer using a
-gyroscope will help to improve the position accuracy particularly over
+gyroscope will help to improve the position accuracy, particularly over
 durations longer than the Schuler period $2\pi
 \sqrt{R_\textnormal{Earth}/g} \approx$
-\sivalue{84.4}{\minute}.
+\sivalue{84.4}{\minute}. 
 \par\noindent
-Finally, it is worth commenting on portability. TH
+A comparison of the interferometer's performance to conventional
+accelerometers will greatly benefit research aimed towards
+practical applications of atom interferometry. This has already been
+demonstrated in the context of gravimeters~\cite{Farah2014,Gillot2014}, where a
+mobile atomic system has demonstrated greater insensitivity to
+vibration noise and better short-term stability than the
+state-of-the-art classical counterpart. Additionally, this interferometer has
+yet to be tested outside of a laboratory environment. A recent
+experiment has investigated the bias stability of a hybrid sensor in a
+simulated harsh environment~\cite{Cheiney2018}. An extension of this
+work to measuring a range of accelerations would further
+support the viability of cold atom inertial sensors.  
+\section{Concluding Remarks}
+The application of newly understood physics has often led to the
+development of more advanced technology. In turn, this has contributed
+to further progress in scientific disciplines, and society in general.
+This philosophy can be applied to the application of matter-wave
+interferometry to inertial sensing. There already exists a significant
+body of research that demonstrates the technical feasibility of
+measuring inertial forces using cold atomic systems. In addition, the
+practical requirements for navigation have served to identify a need
+for the unique benefits of atom interferometers. This work presented
+in this thesis has helped to address this need. It is anticipated that
+the application of quantum mechanics to technology will
+bring practical benefits as well as enable a deeper understanding of
+physical phenomena.
