--- a/interferometry.tex
+++ b/interferometry.tex
@@ -473,7 +473,7 @@ configurations are given in~\TableRef{tab:raman_pol_config}. These
 are defined for an atom being excited from \(\ket{F=1}\) and
 stimulated into \(\ket{F=2}\), so that the \(\vec{k}_2\) beam
 \textit{decreases} the angular momentum when it drives a \(\sigma^+\)
-transition. 
+transition. \nocite{Gauguet2008} 
 \par\noindent
 \FigureRef{fig:raman_spectrum} shows an example of the Raman
 transition spectrum. The beat frequency
@@ -1208,7 +1208,7 @@ The phase difference between the two Raman beams depends on the
 position of the retro-reflecting mirror. Consequently, this defines a frame of
 reference for the position of the atoms during the interferometer. Any
 random motion of the mirror, for instance from mechanical vibrations,
-introduces a random component to the laser phase. An acceleration of
+introduces a random component to the laser phase~\cite{Vigue2006}. An acceleration of
 the mirror modifies the laser phase as follows
 \begin{equation}
   \frac{\mathrm{d}^2 \Phi(t)}{\mathrm{d} t^2} = \keff.\textbf{a}(t)
@@ -1492,3 +1492,13 @@ instability.
   \label{fig:adev_comparison}
 \end{figure}
 
+\section{Conclusion}
+This chapter has described the methods used to observe matter-wave
+interference. It has presented a description of the Raman laser system
+and the scheme used to infer the population in each internal state. 
+The light pulses used to drive Raman
+transitions were subsequently presented, to emphasise the effect of
+a light shift and background atoms on the interferometer. A further
+discussion of identified noise sources showed that vibrations are the
+largest contributor. The interference between two states was
+characterised
