--- a/introduction.tex
+++ b/introduction.tex
@@ -200,7 +200,7 @@ This thesis is structured as follows:
     in-vacuum optical system for driving Raman transitions.
   \item \textbf{Chapter 7} characterises the interferometer's
     sensitivity to accelerations.
-  \item \textbf{Chapter 8} summarises the preceding work and outlines
+  \item \textbf{Chapter 8} summarises the conclusions of this thesis and outlines
     further work towards improving the experiment
 \end{itemize}
 %A theoretical introduction to
