--- a/theory.tex
+++ b/theory.tex
@@ -707,7 +707,7 @@ in subsequent chapters of this thesis, various non-si units are used for conveni
 \begin{itemize}
     \item 1 Gauss (G) \(= \sivalue{1e-4}{\tesla}\)
     \item g = \sivalue{9.80665}{\metre\per\second\squared} (as defined
-      in~\cite{})
+      in~\cite{accelStandard})
   \end{itemize}
 \section{Conclusion}
 This chapter has presented a theoretical overview of matter-wave
@@ -720,3 +720,5 @@ microwave transition and thus, a greater sensitivity to accelerations.
 The effect of rotation on the interferometer phase has not been
 discussed. For further details on an atom interferometer gyroscope,
 the reader is referred to~\cite{Gauguet2009}.
+\nocite{Dubetsky2006}
+\nocite{Han2006}
