--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -63,3 +63,5 @@ work.
 \tableofcontents
 \listoffigures
 \listoftables
+\frontquote{I may not have gone where I intended to go, but I think I
+have ended up where I needed to be}{Douglas Adams}
