--- a/ramanoptics.tex
+++ b/ramanoptics.tex
@@ -30,7 +30,8 @@ sensitivity of the atom interferometer. These are discussed in the
 context of this experiment, where gravity induces transverse motion
 across the light. For instance, a gradient of intensity across
 the atom cloud leads to a variation in the Rabi frequency that
-dephases the atoms and reduces the interferometer fringe contrast.
+dephases the atoms and reduces the interferometer fringe
+contrast~\cite{Kim2017}.
 This places requirements on the beam waist size, which are discussed
 in~\SectionRef{subsec:fringe_beam_size}. 
 
@@ -147,7 +148,7 @@ to $\lambda/20$. At this level, the fringe contrast is severely
 reduced.
 \par\noindent
 A method to systematically characterise this effect has been presented
-in~\cite{Schkolnik2015a}. This requires mapping the wavefront
+in~\cite{Schkolnik2015}. This requires mapping the wavefront
 aberrations caused by each optical elements to numerically calculate
 their effect on the interferometer phase. This is able to reduce the
 uncertainty in their measurement of gravity by an order of
@@ -489,7 +490,8 @@ device was chosen because its specified intrinsic noise was
 \(\sivalue{31.2}{\micro\g}\) so it is sensitive enough to measure the
 acceleration to within one fringe. A schematic of this device is shown
 in~\FigureRef{fig:innalabs}. It operates using a quartz pendulum which is is
-free to move about one axis~\cite{Foote1992}. Under an acceleration, the
+free to move about one
+axis~\cite{Foote1992,Lawrence1998}\nocite{Lawrence1998a}. Under an acceleration, the
 deflection of the pendulum is capacitively detected. A servo loop circuit drives
 a current through the coils to restore the position of the pendulum. This
 current is directly proportional to the acceleration of the pendulum. This model
